[project]
name = "gpt-oss-example"
version = "0.1.0"
description = "The Example for OpenAI latest open-source model gpt-oss"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ollama>=0.5.3",
    "torch>=2.8.0",
    "transformers>=4.55.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.8",
]
